Added Trac SCM, from https://trac.edgewall.org

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <ul>
     <li><a href="/git/">GIT</a> - <em>View GIT repositories</em></li>
     <li><a href="/svn/">SVN</a> - <em>View SVN repositories</em></li>
+    <li><a href="/trac/">TRAC</a> - <em>View TRAC repositories</em></li>
   </ul>
 </body>
 </html>
