Added Trac environment and a script to automatically create new repositories.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><a href="/git/">GIT</a> - <em>View GIT repositories</em></li>
     <li><a href="/svn/">SVN</a> - <em>View SVN repositories</em></li>
     <li><a href="/trac/">TRAC</a> - <em>View TRAC repositories</em></li>
+    <li><a href="/new/">NEW</a> - <em>Create a new repository</em></li>
   </ul>
 </body>
 </html>
